--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,22 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "server":"nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.19.1",
-    "pg": "^7.12.0",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.1"
   }
 }
