--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
@@ -28,6 +29,7 @@
     "chai-http": "^4.3.0",
     "concurrently": "^4.1.1",
     "cross-env": "^5.2.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "nock": "^10.0.6"
   }
 }
