--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server --ignore client",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "cross-env NODE_ENV=test mocha --timeout 10000 test/index.js --exit"
+    "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 test/index.js --exit"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +22,9 @@
     "express-validator": "^6.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "swagger-jsdoc": "^3.4.0",
+    "swagger-ui-express": "^4.0.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -30,6 +32,6 @@
     "concurrently": "^4.1.1",
     "cross-env": "^5.2.0",
     "mocha": "^6.2.0",
-    "nock": "^10.0.6"
+    "nyc": "^14.1.1"
   }
 }
